tests/ui/consts/miri_unleashed/tls.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/tls.rs:11:25
   |
LL |     unsafe { let _val = A; }
   |                         ^ cannot access thread local static `A`

error[E0080]: could not evaluate static initializer
  --> $DIR/tls.rs:20:26
   |
LL |     unsafe { let _val = &A; }
   |                          ^ cannot access thread local static `A`

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/tls.rs:11:25
   |
LL |     unsafe { let _val = A; }
   |                         ^
help: skipping check that does not even have a feature gate
  --> $DIR/tls.rs:20:26
   |
LL |     unsafe { let _val = &A; }
   |                          ^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
